# BoardBuddy

./: CMakeLists.txt  ChessGame.cpp  ChessGame.h  DataReader.cpp  DataReader.h  Interface.h  MergeSort.h  QuickSort.h  README.md  makefile
src/: ChessGame.cpp  ChessGame.h  DataReader.cpp  DataReader.h  Interface.h  QuickSort.h  main.cpp
